messing with projects

--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ hr {
 	background: rgba(0,0,0,0.2);
 	margin: 0 auto;
 	margin-bottom: 30px;
-	border: 0;
+	border: 0;;;;;;;;;;;;;;;;;;;;;;;
 }
 /* Navigation */
 #menu {
